# perfsephone

./: .gitignore  README.md  pyproject.toml  tox.ini
perfsephone/: perfetto_renderer.py  plugin.py  profiler.py  trace_store.py
tests/: test_perfetto_renderer.py  test_plugin.py
