[project]
name = "perfsephone"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Luca Muscat", email = "lucamuscat@gmail.com"}]

dependencies = [
    "pyinstrument==5.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.13.3",
    "tox>=4.25.0",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "S",
    "B",
    "DTZ",
    "C4",
    "LOG",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "FLY",
    "PERF",
]
ignore = [
    "S101"
]
[tool.mypy]
strict = true
[project.entry-points."pytest11"]
"perfsephone" = "perfsephone.plugin"

[tool.setuptools]
packages = ["perfsephone"]